--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -1,25 +1,6 @@
 {% extends 'layout.html' %}
 {% block content %}
 
-
-<!DOCTYPE html>
-<html lang="en-GB">
-
-
-<!--
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="../static/css/custom.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
-  <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css')}}"> -->
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <title>A Cool Name for a To Do List App</title>
-</head>
-  
-  -->
-
-
 <body>
 
   <main>
@@ -29,18 +10,18 @@
     
     <form action="/add" method="POST">
     
-  Task Name:<br>
-  <input type="text" name="title"><br>
+  Task Name
+  <input type="text" name="title">
     
     
-  Description:<br>
-  <input type="text" name="desc"><br>
+  Description
+  <input type="text" name="desc">
   
-    Due Date:<br>
-  <input type="text" name="due_date"><br>
+    Due Date
+  <input type="text" name="due_date">
 
-    Priority:<br>
-    <input type="radio" name="imp" value="important">Important<br>
+    Important
+    <input type="radio" name="imp" value="important">
       
       <input type="submit" value="Create Task">
       
@@ -49,7 +30,7 @@
     
   </main>
     
-  
+{% endblock %}
   
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="static/js/engine.js"></script>
