updating result html page

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,21 +6,51 @@
   <main>
     <h1>Tasks</h1>
     
-      <ul>
-      
-    <!--  {{api_results}} ADD AN IF STTAMENT SO IF NO RESULTS THERE@S A MESSAGE ON PAGE-->
+
+    {{result}}
     
+    {% if result|length == 0 %}
     
+            <p id="headline">You have nothing to do.</p>
+            
+    {% endif %}
+    
+
+<div>
+    <ul>
         {% for task in result %}
           <li><input type="checkbox">{{task}}</li>
         {% endfor %}
-      </ul>
+     </ul>
+</div>
 
       
+
+
+   
+
+   
+    {% for task in results %}
+    
+    <div class="card mt-4 mr-1 ml-1" {% if task[5] == 1 %} id="imp"  {% endif %} >
+      <div class="card-body">
+        <h5 class="card-title">{{task[1]}}</h5>
+        <p class="card-text">{{desc}}</p>
+        <p class="card-text">{{date_due}}</p>
+      </div>
+    </div>
+    
+    
+    {% endfor %}
+
+  
+<div>
+
       <a href="{{ url_for('add_task') }}">Add new task</a>
       
-    </div>
-  </main>
+</div>
+  
+   </main> 
   
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="static/js/engine.js"></script>
