--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -28,6 +28,9 @@
     
   <p>Description<input type="text" name="desc"></p>
   
+  <!--make variable size box -->
+
+  
   <p>Due Date<input type="text" id="datepicker"></p>
 
   <p>Important<input type="radio" name="imp" value="important"></p>
