--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -3,16 +3,6 @@
 
 <head>
 
-  <title>jQuery UI Datepicker - Default functionality</title>
-  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="/resources/demos/style.css">
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script>
-  $( function() {
-    $( "#datepicker" ).datepicker();
-  } );
-  </script>
 
 </head>
 
@@ -29,9 +19,10 @@
   <p>Description<input type="text" name="desc"></p>
   
   <!--make variable size box -->
+  
 
   
-  <p>Due Date<input type="text" id="datepicker"></p>
+  <p>Due Date<input type="date" name="date_due" id="datepicker"></p>
 
   <p>Important<input type="radio" name="imp" value="important"></p>
       
@@ -43,7 +34,7 @@
   </main>
     
 {% endblock %}
-  
+  <!--
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="static/js/engine.js"></script>
   
@@ -52,5 +43,5 @@
     $( "#datepicker" ).datepicker();
   } );
   </script>
-  
+  -->
 </body>
