--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
       </div>
       
                 <form action="/delete/{{task[0]}}" method="POST">
-        <input type = "submit" value="delete" id="delete"> Delete Task</input>
+        <input type = "submit" value="Delete" id="delete"></input>
         </form>
   
       
