adding dropdown menu

--- a/templates/update.html
+++ b/templates/update.html
@@ -22,6 +22,16 @@
   <p>Description<input type="text" name="desc" value="{{item[2]}}"></p>
 
   <p>Due Date<input type="date" name="date_due" value="{{item[3]}}"></p>
+  
+  <p>Status
+  
+  <select>
+  <option value="to do">To Do</option>
+  <option value="in progress">In Progress</option>
+  <option value="done">Done</option>
+  </select>
+
+  </p>
 
   <p>Important<input type="radio" name="imp" value="{{item[5]}}"></p>
       
