--- a/templates/update.html
+++ b/templates/update.html
@@ -1,31 +1,32 @@
 {% extends 'layout.html' %}
 {% block content %}
 
-<head>
-
-
-</head>
 
 <body>
 <main>
 
 <h1>Update Task</h1>
     
-    
 <div><h2>Update Task</h2>
 
 
-  <form action="/update/{{item[0]}}" method="POST">
-    
-  <p>Task Name<input type="text" name="title" value="{{item[1]}}"></p>
-    
-  <p>Description<input type="text" name="desc" value="{{item[2]}}"></p>
+{{specific_item}}
 
-  <p>Due Date<input type="date" name="date_due" value="{{item[3]}}"></p>
+
+
+
+
+  <form action="/update/{{specific_item[0]}}" method="POST">
+    
+  <p>Task Name<input type="text" name="title" value="{{specific_item[1]}}"></p>
+    
+  <p>Description<input type="text" name="desc" value="{{specific_item[2]}}"></p>
+
+  <p>Due Date<input type="date" name="date_due" value="{{specific_item[4]}}"></p>
   
   <p>Status
   
-  <select>
+  <select name = "status">
   <option value="to do">To Do</option>
   <option value="in progress">In Progress</option>
   <option value="done">Done</option>
@@ -33,9 +34,11 @@
 
   </p>
 
-  <p>Important<input type="radio" name="imp" value="{{item[5]}}"></p>
+  <p>Important<input type="radio" name="imp" value="{{specific_item[6]}}"></p>
       
   <p><input type="submit" value="Update Task" id="update"></p>
+  
+
       
   </form>
     
