--- a/templates/index.html
+++ b/templates/index.html
@@ -8,24 +8,26 @@
     
     
     <div id="add_new_task">
-      <a href="{{ url_for('add_task') }}">Add new task</a>
+      <a href="{{ url_for('add_task') }}"><h3>ADD NEW TASK</h3></a>
     </div>
+    
     
     <div class="container" id="task_cards">
         <div class="row d-flex justify-content-start">
+        
     
     {% if result|length == 0 %}
             <p id="headline">You have nothing to do.</p>  
     {% endif %}
     
     {% for task in result %}
-    
-    <div class="card mt-4 mr-1 ml-1" {% if task[5] == 1 %} id="imp"  {% endif %} >
+
+    <div class="card mt-4 mr-1 ml-1" {% if task[6] == "1" %} id="imp"  {% endif %} >
       <div class="card-body">
         <h5 class="card-title">{{task[1]}}</h5>
-        <p class="card-text">{{task[2]}}</p>
-        <p class="card-text">{{task[3]}}</p>
-        <p class="card-text">{{task[4]}}</p>
+        <p class="card-text">Description: {{task[2]}}</p>
+        <p class="card-text">Status: {{task[3]}}</p>
+        <p class="card-text">Date Due: {{task[4][8:10]}} / {{task[4][5:7]}} / {{task[4][0:4]}} </p>     
       </div>
       
         <form action="/delete/{{task[0]}}" method="POST">
