--- a/static/css/main.css
+++ b/static/css/main.css
@@ -19,12 +19,22 @@ h1 {
 
 
 /*styling for cards*/
+
+#imp {
+    background-color: #f7d4d4;
+}
+
 .card {
 width: 23%;
 }
 
 h5 span {
     display: block;
+}
+
+#desc {
+font-style: italic;
+padding-above: 20px;
 }
 
 img {
@@ -43,14 +53,50 @@ img {
     text-align: center;
 }
 
-.card-body #imp {
-    background-color: #f7d4d4;
-}
-
 .card-body {
     padding: 10px;
 }
 
 #cards {
-padding-bottom: 50px;
+    padding-bottom: 50px;
 }
+
+#delete_button {
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 10px;
+  }
+  
+#update_button {
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 10px;
+}
+
+/*
+#delete_button {
+  background-color: #f24646;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+
+#update_button {
+  background-color: #a9d7f9;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+*/
