--- a/templates/index.html
+++ b/templates/index.html
@@ -22,19 +22,22 @@
     <div class="card mt-4 mr-1 ml-1" {% if task[6] == "1" %} id="imp"  {% endif %} >
       <div class="card-body">
         <h5 class="card-title">{{task[1]}}</h5>
-        <p class="card-text">Description: {{task[2]}}</p>
+        <p class="card-text" id="desc">{{task[2]}}</p>
         <p class="card-text">Status: {{task[3]}}</p>
         <p class="card-text">Date Due: {{task[4][8:10]}} / {{task[4][5:7]}} / {{task[4][0:4]}} </p>     
       </div>
       
-        <form action="/delete/{{task[0]}}" method="POST">
-        <input type = "submit" value="Delete" id="delete"></input>
-        </form>
-        
+      <div style="text-align:center;">
+      
         <form action="/update/{{task[0]}}" method="GET">
-        <input type = "submit" value="Update" id="update"></input>
+        <input type = "submit" value="Update" id="update_button"></input>
+        </form>
+      
+        <form action="/delete/{{task[0]}}" method="POST">
+        <input type = "submit" value="Delete" id="delete_button"></input>
         </form>
         
+       </div> 
     </div>
     
     {% endfor %}
